tests/base/parser/bad/address_type_empty_parameter.scilla
scilla_version 0

contract T ()

 (* When using () in an address type, must include at least one contract parameter *)
transition F (z : ByStr20 with contract () end)
  y <-& x._balance
end